# aiohttp-milvus

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: client.py  conf.py  main.py
src/clients/: milvus.py
src/datamodels/: monitor.py
src/dependencies/: base.py  milvus.py
src/routers/: monitor.py
