[tool.poetry]
name = "aiohttp-milvus"
version = "0.1.0"
description = "Asynchronous Milvus client for Python based on aiohttp"
authors = ["Vitaly Petrov <VitaliyPetrov18@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
ujson = "^4.2.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
